gnome-settings-daemon (3.22.2-3) UNRELEASED; urgency=medium

  * Add autopkgtest to run upstream tests

 -- Jeremy Bicha <jbicha@ubuntu.com>  Thu, 04 May 2017 12:06:22 -0400

gnome-settings-daemon (3.22.2-2) unstable; urgency=medium

  * Team upload
  * d/p/media-keys-Fix-mmkeys-D-Bus-API-to-match-API-docs.patch:
    Own the D-Bus name that the API documentation tells users of the
    multimedia keys API they should use (org.gnome.SettingsDaemon.MediaKeys),
    in addition to the D-Bus name that they actually use in practice
    (org.gnome.SettingsDaemon). (Closes: #861111)

 -- Simon McVittie <smcv@debian.org>  Mon, 24 Apr 2017 19:54:01 +0100

gnome-settings-daemon (3.22.2-1) unstable; urgency=medium

  * New upstream release.

 -- Michael Biebl <biebl@debian.org>  Tue, 14 Mar 2017 18:22:17 +0100

gnome-settings-daemon (3.22.1-1) unstable; urgency=medium

  * New upstream release.

 -- Andreas Henriksson <andreas@fatal.se>  Tue, 11 Oct 2016 14:39:33 +0200

gnome-settings-daemon (3.22.0-1) unstable; urgency=medium

  * New upstream release.
  * Refresh debian/patches/04_superP.patch.
  * Bump debhelper compat level to 10.

 -- Michael Biebl <biebl@debian.org>  Wed, 21 Sep 2016 02:16:25 +0200

gnome-settings-daemon (3.21.92.1-1) unstable; urgency=medium

  * New upstream beta release.

 -- Andreas Henriksson <andreas@fatal.se>  Tue, 13 Sep 2016 14:18:41 +0200

gnome-settings-daemon (3.21.90-2) unstable; urgency=medium

  * Drop translations for strings introduced by
    debian/patches/01_reinstate_updates_plugin.patch, this patch has been
    removed a while ago.
  * Install man page provided by upstream and remove the outdated one we
    shipped downstream.
  * Drop conffile removal code from pre-wheezy.
  * Convert from cdbs to dh.
  * Use dh-exec to install architecture specific files and switch from
    --list-missing to --fail-missing, to avoid missing uninstalled files.
  * Upload to unstable.
